<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CA2626"
    android:padding="5dp">

    <TextView
        android:id="@+id/popupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/exp_date_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputExpirationDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/inputExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:width="290sp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_selector"
        android:drawableStart="@drawable/ic_baseline_update_24"
        android:drawablePadding="@dimen/mail_input_drawable_padding"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/exp_date_hint"
        android:inputType="date"
        android:minHeight="@dimen/mail_input_min_height"
        android:paddingStart="@dimen/mail_input_padding_rl"
        android:paddingEnd="@dimen/mail_input_padding_rl"
        android:textAlignment="center"
        android:textColor="@color/input_color"
        android:textColorHint="#00646864"
        android:textCursorDrawable="@drawable/input_cursor_selector"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/expDateBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupTitle" />

    <Button
        android:id="@+id/expDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_date_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputExpirationDate" />

</androidx.constraintlayout.widget.ConstraintLayout>