<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userViewModel"
            type="com.mobg5.g56080.foodee.fragment.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/your_profile_text"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Your profile" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:width="290sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_selector"
            android:drawableStart="@drawable/ic_baseline_fade_person_24"
            android:drawablePadding="@dimen/mail_input_drawable_padding"
            android:ems="10"
            android:enabled="false"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:minHeight="@dimen/mail_input_min_height"
            android:paddingStart="@dimen/mail_input_padding_rl"
            android:paddingEnd="@dimen/mail_input_padding_rl"
            android:text="@{userViewModel.currentUserForm.name}"
            android:textAlignment="center"
            android:textColor="@color/input_color"
            android:textColorHint="#00646864"
            android:textCursorDrawable="@drawable/input_cursor_selector"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/userEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:width="290sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_selector"
            android:drawableStart="@drawable/envelope"
            android:drawablePadding="@dimen/mail_input_drawable_padding"
            android:ems="10"
            android:enabled="false"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/mail_input_min_height"
            android:paddingStart="@dimen/mail_input_padding_rl"
            android:paddingEnd="@dimen/mail_input_padding_rl"
            android:text="@{userViewModel.currentUserForm.email}"
            android:textAlignment="center"
            android:textColor="@color/input_color"
            android:textColorHint="#00646864"
            android:textCursorDrawable="@drawable/input_cursor_selector"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/signoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <Button
            android:id="@+id/signoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="@dimen/login_button_padding_rl"
            android:paddingTop="@dimen/login_button_padding_tb"
            android:paddingEnd="@dimen/login_button_padding_rl"
            android:paddingBottom="@dimen/login_button_padding_tb"
            android:text="@string/signout_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textSize="@dimen/login_button_font_size"
            android:onClick="@{() -> userViewModel.onUserSignOut()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>